@@ -1,3 +1,10 @@
+2010-01-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/addons.c, src/ao_tasks.c, src/ao_tasks.h:
+   Use the new "geany-startup-complete" signal to initially update
+   the tasks list.
+
+
 2010-01-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * AUTHORS, README, src/ao_blanklines.c, src/ao_blanklines.h,
